# sukless2

./: .gitignore  CMakeLists.txt  README.md  images.qrc
include/: AI.hxx  AIRunner.h  App.h  App.hxx  BitBoard.hxx  Bitboard.hxx  BoardConstants.hxx  BoardManager.hxx  BoardModel.h  Game.h  Game.hxx  MoveGen.hxx  MoveGenerator.hxx  MoveModel.h  enums.hxx  util.hxx
include/engine/: AI.hxx  BoardManager.hxx  ChessTypes.hxx  ChessUtil.hxx  Constants.hxx  MoveGenerator.hxx  Util.hxx
qml/: AppContent.qml  Board.qml  CenteredText.qml  DefaultText.qml  GameOverPopup.qml  Home.qml  HomeLeftPane.qml  HomeRightPane.qml  Main.qml  MainMenu.qml  NavStack.qml  PillButton.qml  PromotionPopup.qml
qml/style/: Style.qml
src/: AI.cpp  AIRunner.cpp  App.cpp  BoardManager.cpp  BoardModel.cpp  Game.cpp  MoveGen.cpp  MoveGenerator.cpp  MoveModel.cpp  main.cpp  util.cpp
src/engine/: AI.cpp  BoardManager.cpp  ChessUtil.cpp  MoveGenerator.cpp
